<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.warnotte</groupId>
	<artifactId>obj2gui2</artifactId>
	<version>0.6.0</version>
	<name>Wax Obj2gui2</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- <maven.compiler.source>11</maven.compiler.source> <maven.compiler.target>9</maven.compiler.target> -->
		<maven.compiler.release>11</maven.compiler.release>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
	
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			
			 

			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<phase>package</phase>
						<configuration>
							<!-- <target>
					
								<copy todir="${basedir}/target/etc">
									<fileset dir="etc">
										<include name="**/*" />
									</fileset>
								</copy>
							
							</target>
							-->
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.miglayout/miglayout-swing -->
		<!--  Deja dans WaxlibSwingcomponents -->
	<!-- 	<dependency>
		    <groupId>com.miglayout</groupId>
		    <artifactId>miglayout-swing</artifactId>
		    <version>5.2</version>
		</dependency> -->
		
		<dependency>
    <groupId>io.github.warnotte</groupId>
    <artifactId>waxlib3</artifactId>
    <version>0.0.1.2</version>
</dependency>
<!--  
		<dependency>
			<groupId>org.warnotte</groupId>
			<artifactId>waxlibswingcomponentsMVN</artifactId>
			<version>0.5.0</version>
		</dependency>

		<dependency>
			<groupId>org.warnotte</groupId>
			<artifactId>waxLib2</artifactId>
			<version>0.5.0</version>
		</dependency>
-->

		<dependency>
			<groupId>javax.vecmath</groupId>
			<artifactId>vecmath</artifactId>
			<version>1.5.2</version>
		</dependency>

 		

	</dependencies>


<repositories>
  <repository>
    <id>gitlab-maven</id>
    <url>https://gitlab.uliege.be/api/v4/projects/1592/packages/maven</url>
  </repository>
</repositories>

<distributionManagement>
  <repository>
    <id>gitlab-maven</id>
    <url>https://gitlab.uliege.be/api/v4/projects/1592/packages/maven</url>
  </repository>

  <snapshotRepository>
    <id>gitlab-maven</id>
    <url>https://gitlab.uliege.be/api/v4/projects/1592/packages/maven</url>
  </snapshotRepository>
</distributionManagement>

<!-- This the .m2/settings.xml configuration  

<settings>
  <servers>
    <server>
      <id>gitlab-maven</id>
      <configuration>
        <httpHeaders>
      
          <property>
            <name>Deploy-Token</name>
            <value>i1xjuzvpcEpxsbSsBd9r</value>
          </property>
        </httpHeaders>
      </configuration>
    </server>
  </servers>
</settings>

	
 -->

</project>